Fixed table-header misalignment bug

--- a/src/routes/dashboard/components/eventLogs.less
+++ b/src/routes/dashboard/components/eventLogs.less
@@ -1,4 +1,12 @@
 :global {
+  .ant-table-thead > tr > th.ant-table-column-has-actions.ant-table-column-has-sorters, .ant-table-thead > tr > th.ant-table-column-has-actions.ant-table-column-has-filters{
+    padding-right: 16px !important;
+  }
+  .ant-table-row-hover {
+    td {
+      background: #ebf2f6 !important;
+    }
+  }
   .eventLogs {
     margin-top: 50px;
     background-color: #ffffff;
